# MAVSDK

examples/formation/: CMakeLists.txt  Communicator.hpp  communicator.cpp  test.cpp
examples/set_actuator/: CMakeLists.txt  set_actuator.cpp
examples/takeoff_and_land/: CMakeLists.txt  takeoff_and_land.cpp
